force-app/main/default/objects/Opportunity/fields/ClickUp_URL__c.field-meta.xml
<CustomField>
    <fullName>ClickUp_URL__c</fullName>
    <label>ClickUp URL</label>
    <type>Url</type>
</CustomField>