force-app/main/default/objects/Opportunity/listViews/MyOwnOpportunity.listView-meta.xml
<ListView>
    <fullName>MyOwnOpportunity</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Volodymyr Vysotkyi</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/21/2025 12:00 AM</value>
    </filters>
    <label>MyOwnOpportunity</label>
</ListView>